# Hagiographies

./: .gitignore  AGENTS.md  DATABASE_ARCHITECTURE.md  MIGRATION_POSTGRESQL.md  README.md  compose.yml  dev.env  justfile  main.py  pyproject.toml
.github/workflows/: publish.yml  release.yml
app/: Dockerfile  database.py  main.py
caddy/: Caddyfile
import/: Dockerfile  README.md  generate_diagram.py  inspect_data.py  inspect_structure.py  inspect_structure_full.py  pyproject.toml  verify_import.py
import/src/hagiographies_import/: cli.py  config.py  model.py
kottster/: .gitignore  Dockerfile  kottster-app.json  package.json  prd.Dockerfile  vite.config.js
kottster/app/: index.html  main.jsx
kottster/app/_server/: app.js  server.js
kottster/app/_server/data-sources/hagiographies/: index.js
kottster/app/_server/data-sources/hagiographies_db/: dataSource.json  index.js
kottster/app/pages/archbishopric/: page.json
kottster/app/pages/author/: page.json
kottster/app/pages/bishopric/: page.json
kottster/app/pages/corpusHagio/: page.json
kottster/app/pages/edition/: page.json
kottster/app/pages/entry/: page.json
kottster/app/pages/institution/: page.json
kottster/app/pages/location/: page.json
kottster/app/pages/manuscript/: page.json
kottster/app/pages/manuscriptPG/: page.json
kottster/app/pages/origin/: page.json
kottster/app/pages/place/: page.json
kottster/app/pages/reference/: page.json
kottster/app/pages/text/: page.json
kottster/app/pages/witness/: page.json
kottster/app/schemas/: sidebar.json
kottster/scripts/: dev.sh  prod.sh
local-map/: README.md  index.html
local-map/scripts/: download-world-pmtiles.js
utils/: Dockerfile  utils.env
utils/documenter/: README.md  pyproject.toml
utils/documenter/src/documenter/: generate_diagram.py
utils/exporter/: README.md  pyproject.toml
utils/exporter/src/exporter/: export_map.py  export_sqlite.py  filter.json
utils/exporter/tests/: test_export.py
utils/importer/: README.md  check_headers_container.py  pyproject.toml  search_workbook.py
utils/importer/src/importer/: cli.py  cli_old.txt
utils/utilities/: README.md  pyproject.toml
utils/utilities/src/utilities/: config.py  db.py  model.py
